--- a/app/index.html
+++ b/app/index.html
@@ -96,9 +96,225 @@
         </div>
     </section>
 
+    <section class="products">
+        <div class="container-fluid">
+            <div class="products__title title">
+                Let’s Check Out Our Newest Release Products
+            </div>
+            <div class="products__inner">
+                <div class="products__inner-btn">
+                    <button type="button" data-filter="all">All</button>
+                    <button type="button" data-filter=".category-wordpress">Wordpress</button>
+                    <button type="button" data-filter=".category-joomla">Joomla</button>
+                    <button type="button" data-filter=".category-plugins">Plugins</button>
+                    <button type="button" data-filter=".category-component">Component</button>
+                    <button type="button" data-filter=".category-psd">PSD</button>
+                </div>
+                <div class="products__inner-box">
+                    <div class="products__item mix category-plugins category-new">
+                        <a class="products__item-img" style="background-image: url(images/content/product-item.jpg);"
+                            href="#"></a>
+                        <div class="products__item-content">
+                            <div class="products__item-name">
+                                <a class="products__item-title" href="#">
+                                    Responsive Mobile APP
+                                </a>
+                                <a class="products__item-category" href="#">
+                                    Site Template
+                                </a>
+                            </div>
+                            <div class="products__item-price">$19</div>
+                        </div>
+                        <div class="products__item-info">
+                            <a class="products__item-author" href="#">
+                                <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+                                <span>Radiustheme</span>
+                            </a>
+                            <div class="products__item-star">
+                                (05)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="products__item mix category-wordpress category-new">
+                        <a class="products__item-img" style="background-image: url(images/content/product-item2.jpg);"
+                            href="#"></a>
+                        <div class="products__item-content">
+                            <div class="products__item-name">
+                                <a class="products__item-title" href="#">
+                                    The Post Grid Pro
+                                </a>
+                                <a class="products__item-category" href="#">
+                                    WordPress Plugin
+                                </a>
+                            </div>
+                            <div class="products__item-price">$15</div>
+                        </div>
+                        <div class="products__item-info">
+                            <a class="products__item-author" href="#">
+                                <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+                                <span>PsdBosS</span>
+                            </a>
+                            <div class="products__item-star">
+                                (05)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="products__item mix category-wordpress category-new">
+                        <a class="products__item-img" style="background-image: url(images/content/product-item3.jpg);"
+                            href="#"></a>
+                        <div class="products__item-content">
+                            <div class="products__item-name">
+                                <a class="products__item-title" href="#">
+                                    Food Menu
+                                </a>
+                                <a class="products__item-category" href="#">
+                                    WordPress Plugin
+                                </a>
+                            </div>
+                            <div class="products__item-price">$20</div>
+                        </div>
+                        <div class="products__item-info">
+                            <a class="products__item-author" href="#">
+                                <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+                                <span>Manilip</span>
+                            </a>
+                            <div class="products__item-star">
+                                (05)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="products__item mix category-psd category-popular">
+                        <a class="products__item-img" style="background-image: url(images/content/product-item4.jpg);"
+                            href="#"></a>
+                        <div class="products__item-content">
+                            <div class="products__item-name">
+                                <a class="products__item-title" href="#">
+                                    Imac Mockup
+                                </a>
+                                <a class="products__item-category" href="#">
+                                    Psd Template
+                                </a>
+                            </div>
+                            <div class="products__item-price">$12</div>
+                        </div>
+                        <div class="products__item-info">
+                            <a class="products__item-author" href="#">
+                                <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+                                <span>Lolypop</span>
+                            </a>
+                            <div class="products__item-star">
+                                (05)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="products__item mix category-joomla category-popular">
+                        <a class="products__item-img" style="background-image: url(images/content/product-item5.jpg);"
+                            href="#"></a>
+                        <div class="products__item-content">
+                            <div class="products__item-name">
+                                <a class="products__item-title" href="#">
+                                    Gymedge
+                                </a>
+                                <a class="products__item-category" href="#">
+                                    Joomla Template
+                                </a>
+                            </div>
+                            <div class="products__item-price">$45</div>
+                        </div>
+                        <div class="products__item-info">
+                            <a class="products__item-author" href="#">
+                                <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+                                <span>Micrsof</span>
+                            </a>
+                            <div class="products__item-star">
+                                (05)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="products__item mix category-wordpress category-new">
+                        <a class="products__item-img" style="background-image: url(images/content/product-item6.jpg);"
+                            href="#"></a>
+                        <div class="products__item-content">
+                            <div class="products__item-name">
+                                <a class="products__item-title" href="#">
+                                    The Post Grid Pro
+                                </a>
+                                <a class="products__item-category" href="#">
+                                    Wordpress Template
+                                </a>
+                            </div>
+                            <div class="products__item-price">$19</div>
+                        </div>
+                        <div class="products__item-info">
+                            <a class="products__item-author" href="#">
+                                <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+                                <span>Raklouse</span>
+                            </a>
+                            <div class="products__item-star">
+                                (05)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="products__item mix category-component category-popular">
+                        <a class="products__item-img" style="background-image: url(images/content/product-item7.jpg);"
+                            href="#"></a>
+                        <div class="products__item-content">
+                            <div class="products__item-name">
+                                <a class="products__item-title" href="#">
+                                    Doll Face
+                                </a>
+                                <a class="products__item-category" href="#">
+                                    Illsatration
+                                </a>
+                            </div>
+                            <div class="products__item-price">$10</div>
+                        </div>
+                        <div class="products__item-info">
+                            <a class="products__item-author" href="#">
+                                <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+                                <span>Mikc Art</span>
+                            </a>
+                            <div class="products__item-star">
+                                (05)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="products__item mix category-psd category-popular">
+                        <a class="products__item-img" style="background-image: url(images/content/product-item8.jpg);"
+                            href="#"></a>
+                        <div class="products__item-content">
+                            <div class="products__item-name">
+                                <a class="products__item-title" href="#">
+                                    Designer Mockup
+                                </a>
+                                <a class="products__item-category" href="#">
+                                    Psd Template
+                                </a>
+                            </div>
+                            <div class="products__item-price">$10</div>
+                        </div>
+                        <div class="products__item-info">
+                            <a class="products__item-author" href="#">
+                                <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+                                <span>ThemeLol</span>
+                            </a>
+                            <div class="products__item-star">
+                                (05)
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="products__bottom-btn">
+                <button type="button" data-filter=".category-new">All New Items</button>
+                <button type="button" data-filter=".category-popular">Popular Items</button>
+            </div>
+        </div>
+    </section>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
-    <script src="js/main.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
