--- a/app/product-one.html
+++ b/app/product-one.html
@@ -396,7 +396,7 @@
                                 <button class="icon-heart-o">Add To Favourites</button>
                                 <button>Buy Now</button>
                             </div>
-                            <div class="aside-item">
+                            <div class="aside-item aside-item__author">
                                 <div class="aside__title">Product Author</div>
                                 <div class="product-author__box">
                                     <div class="author__avatar">
@@ -420,7 +420,7 @@
                                     <span>05 </span>  Sales
                                 </div>
                             </div>
-                            <div class="aside-item">
+                            <div class="aside-item aside-item__info">
                                 <div class="aside__title">Product Information</div>
                                 <div class="information__line">
                                     <span>Released On:</span> 1 January, 2016
