--- a/app/index.html
+++ b/app/index.html
@@ -201,10 +201,10 @@
     <section class="search" style="background-image: url(images/search-bg.jpg);">
         <div class="container">
             <div class="search__inner">
-                <div class="search__inner-title">
+                <div class="search__inner-title wow animate__fadeInDownBig">
                     Welcome To Foxtar Market Place!
                 </div>
-                <div class="search__inner-text">
+                <div class="search__inner-text wow animate__fadeInUpBig">
                     Premium WordPress Themes, Web Templates and Many More ...
                 </div>
                 <div class="search__inner-form">
@@ -222,7 +222,7 @@
     <section class="products">
         <div class="products__wrapper">
             <div class="container-fluid">
-                <div class="products__title title">
+                <div class="products__title title wow animate__slideInLeft">
                     Let’s Check Out Our Newest Release Products
                 </div>
                 <div class="products__inner">
@@ -235,7 +235,7 @@
                         <button type="button" data-filter=".category-psd">PSD</button>
                     </div>
                     <div class="products__inner-box">
-                        <div class="products__item mix category-plugins category-new">
+                        <div class="products__item wow animate__slideInUp mix category-plugins category-new">
                             <a class="products__item-img"
                                 style="background-image: url(images/content/product-item.jpg);" href="#"></a>
                             <div class="products__item-content">
@@ -259,7 +259,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="products__item mix category-wordpress category-new">
+                        <div class="products__item wow animate__slideInUp mix category-wordpress category-new">
                             <a class="products__item-img"
                                 style="background-image: url(images/content/product-item2.jpg);" href="#"></a>
                             <div class="products__item-content">
@@ -283,7 +283,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="products__item mix category-wordpress category-new">
+                        <div class="products__item wow animate__slideInUp mix category-wordpress category-new">
                             <a class="products__item-img"
                                 style="background-image: url(images/content/product-item3.jpg);" href="#"></a>
                             <div class="products__item-content">
@@ -307,7 +307,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="products__item mix category-psd category-popular">
+                        <div class="products__item wow animate__slideInUp mix category-psd category-popular">
                             <a class="products__item-img"
                                 style="background-image: url(images/content/product-item4.jpg);" href="#"></a>
                             <div class="products__item-content">
@@ -331,7 +331,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="products__item mix category-joomla category-popular">
+                        <div class="products__item wow animate__slideInUp mix category-joomla category-popular">
                             <a class="products__item-img"
                                 style="background-image: url(images/content/product-item5.jpg);" href="#"></a>
                             <div class="products__item-content">
@@ -355,7 +355,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="products__item mix category-wordpress category-new">
+                        <div class="products__item wow animate__slideInUp mix category-wordpress category-new">
                             <a class="products__item-img"
                                 style="background-image: url(images/content/product-item6.jpg);" href="#"></a>
                             <div class="products__item-content">
@@ -379,7 +379,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="products__item mix category-component category-popular">
+                        <div class="products__item wow animate__slideInUp mix category-component category-popular">
                             <a class="products__item-img"
                                 style="background-image: url(images/content/product-item7.jpg);" href="#"></a>
                             <div class="products__item-content">
@@ -403,7 +403,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="products__item mix category-psd category-popular">
+                        <div class="products__item wow animate__slideInUp mix category-psd category-popular">
                             <a class="products__item-img"
                                 style="background-image: url(images/content/product-item8.jpg);" href="#"></a>
                             <div class="products__item-content">
@@ -440,10 +440,10 @@
     <section class="products-slider">
         <div class="products-slider__wrapper">
             <div class="container-fluid">
-                <div class="product-slider__title title">
+                <div class="product-slider__title title wow animate__slideInRight">
                     This Week Trending Products
                 </div>
-                <div class="products-slider__inner">
+                <div class="products-slider__inner wow animate__slideInUp">
                     <div class="products__item">
                         <a class="products__item-img" style="background-image: url(images/content/product-item8.jpg);"
                             href="#"></a>
@@ -835,7 +835,7 @@
 
     <section class="advantages">
         <div class="container">
-            <div class="advantages__title title">
+            <div class="advantages__title title wow animate__slideInLeft">
                 Why You Choose Foxtar Market Place?
             </div>
             <div class="advantages__inner">
@@ -893,10 +893,10 @@
 
     <section class="tutorial">
         <div class="container">
-            <div class="tutorial__title title">
+            <div class="tutorial__title title wow animate__slideInRight">
                 Free Monthly Tutorials To Help You With Your Project
             </div>
-            <div class="tutorial__inner">
+            <div class="tutorial__inner wow animate__slideInUp">
                 <div class="tutorial__item">
                     <div class="tutorial__item-img" style="background-image: url(images/content/tutorial.jpg);"></div>
                     <div class="tutorial__item-title">
