added page links

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Moderno</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300,500,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/libs.min.css">
@@ -163,34 +163,34 @@
                     </div>
                     <ul class="menu__list">
                         <li>
-                            <a href="#">Home</a>
+                            <a href="index.html">Home</a>
                         </li>
                         <li>
-                            <a href="#">About</a>
+                            <a href="about.html">About</a>
                         </li>
                         <li>
-                            <a href="#">WordPress</a>
+                            <a href="404.html">WordPress</a>
                         </li>
                         <li>
-                            <a href="#">Joomla</a>
+                            <a href="404.html">Joomla</a>
                         </li>
                         <li>
-                            <a href="#">PSD</a>
+                            <a href="404.html">PSD</a>
                         </li>
                         <li>
-                            <a href="#">Plugins</a>
+                            <a href="404.html">Plugins</a>
                         </li>
                         <li>
-                            <a href="#">Components</a>
+                            <a href="404.html">Components</a>
                         </li>
                         <li>
-                            <a href="#">Pages</a>
+                            <a href="new-items.html">Products</a>
                         </li>
                         <li>
-                            <a href="#">Contact</a>
+                            <a href="contacts.html">Contact</a>
                         </li>
                         <li>
-                            <a href="#">Help</a>
+                            <a href="404.html">Help</a>
                         </li>
                     </ul>
                 </nav>
@@ -235,7 +235,7 @@
                         <button type="button" data-filter=".category-psd">PSD</button>
                     </div>
                     <div class="products__inner-box">
-                        <div class="products__item wow animate__slideInUp mix category-plugins category-new">
+                        <div class="products__item mix category-plugins category-new">
                             <a class="products__item-img"
                                 style="background-image: url(images/content/product-item.jpg);" href="#"></a>
                             <div class="products__item-content">
@@ -259,7 +259,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="products__item wow animate__slideInUp mix category-wordpress category-new">
+                        <div class="products__item mix category-wordpress category-new">
                             <a class="products__item-img"
                                 style="background-image: url(images/content/product-item2.jpg);" href="#"></a>
                             <div class="products__item-content">
@@ -283,7 +283,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="products__item wow animate__slideInUp mix category-wordpress category-new">
+                        <div class="products__item mix category-wordpress category-new">
                             <a class="products__item-img"
                                 style="background-image: url(images/content/product-item3.jpg);" href="#"></a>
                             <div class="products__item-content">
@@ -307,7 +307,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="products__item wow animate__slideInUp mix category-psd category-popular">
+                        <div class="products__item mix category-psd category-popular">
                             <a class="products__item-img"
                                 style="background-image: url(images/content/product-item4.jpg);" href="#"></a>
                             <div class="products__item-content">
@@ -331,7 +331,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="products__item wow animate__slideInUp mix category-joomla category-popular">
+                        <div class="products__item mix category-joomla category-popular">
                             <a class="products__item-img"
                                 style="background-image: url(images/content/product-item5.jpg);" href="#"></a>
                             <div class="products__item-content">
@@ -355,7 +355,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="products__item wow animate__slideInUp mix category-wordpress category-new">
+                        <div class="products__item mix category-wordpress category-new">
                             <a class="products__item-img"
                                 style="background-image: url(images/content/product-item6.jpg);" href="#"></a>
                             <div class="products__item-content">
@@ -379,7 +379,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="products__item wow animate__slideInUp mix category-component category-popular">
+                        <div class="products__item mix category-component category-popular">
                             <a class="products__item-img"
                                 style="background-image: url(images/content/product-item7.jpg);" href="#"></a>
                             <div class="products__item-content">
@@ -403,7 +403,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="products__item wow animate__slideInUp mix category-psd category-popular">
+                        <div class="products__item mix category-psd category-popular">
                             <a class="products__item-img"
                                 style="background-image: url(images/content/product-item8.jpg);" href="#"></a>
                             <div class="products__item-content">
