--- a/app/product-one.html
+++ b/app/product-one.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Moderno</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300,500,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/libs.min.css">
@@ -135,14 +135,14 @@
                                     </a>
                                     <div class="user__menu">
                                         <ul class="user__menu-list">
-                                            <li><a class="angle-right" href="#">Profile Page</a></li>
+                                            <li><a class="angle-right" href="profile.html">Profile Page</a></li>
                                             <li><a class="angle-right" href="#">Portfolio</a></li>
-                                            <li><a class="angle-right" href="#">Account Setting</a></li>
+                                            <li><a class="angle-right" href="settings.html">Account Setting</a></li>
                                             <li><a class="angle-right" href="#">Downloads</a></li>
                                             <li><a class="angle-right" href="#">Wishlist</a></li>
-                                            <li><a class="angle-right" href="#">Upload Item</a></li>
+                                            <li><a class="angle-right" href="upload.html">Upload Item</a></li>
                                             <li><a class="angle-right" href="#">Statement</a></li>
-                                            <li><a class="angle-right" href="#">Withdraws</a></li>
+                                            <li><a class="angle-right" href="withdrawals.html">Withdraws</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -164,34 +164,34 @@
                             </div>
                             <ul class="menu__list">
                                 <li>
-                                    <a href="#">Home</a>
+                                    <a href="index.html">Home</a>
                                 </li>
                                 <li>
-                                    <a href="#">About</a>
+                                    <a href="about.html">About</a>
                                 </li>
                                 <li>
-                                    <a href="#">WordPress</a>
+                                    <a href="404.html">WordPress</a>
                                 </li>
                                 <li>
-                                    <a href="#">Joomla</a>
+                                    <a href="404.html">Joomla</a>
                                 </li>
                                 <li>
-                                    <a href="#">PSD</a>
+                                    <a href="404.html">PSD</a>
                                 </li>
                                 <li>
-                                    <a href="#">Plugins</a>
+                                    <a href="404.html">Plugins</a>
                                 </li>
                                 <li>
-                                    <a href="#">Components</a>
+                                    <a href="404.html">Components</a>
                                 </li>
                                 <li>
-                                    <a href="#">Pages</a>
+                                    <a href="new-items.html">Products</a>
                                 </li>
                                 <li>
-                                    <a href="#">Contact</a>
+                                    <a href="contacts.html">Contact</a>
                                 </li>
                                 <li>
-                                    <a href="#">Help</a>
+                                    <a href="404.html">Help</a>
                                 </li>
                             </ul>
                         </nav>
@@ -221,8 +221,8 @@
                 <div class="container">
                     <div class="breadcrumbs__inner">
                         <ul class="breadcrumbs__list">
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Product Page</a></li>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="new-items.html">Product page</a></li>
                             <li><span>WordPress - GT Builder Construction<span></li>
                         </ul>
                     </div>
@@ -404,7 +404,7 @@
                                     </div>
                                     <div class="author__info">
                                         <div class="author__name">PsdBoss</div>
-                                        <a class="author__info-link" href="#">View Profile</a>
+                                        <a class="author__info-link" href="profile.html">View Profile</a>
                                     </div>
                                 </div>
                                 <ul class="author__awards-list">
